# Personal-Assistant

./: .dockerignore  .gitignore  Dockerrun.aws.json  README.md  dev.txt  docker-compose.yml  eb-full-logs.txt  render.yaml
backend/: .dockerignore  Dockerfile  celerybeat-schedule-shm  celerybeat-schedule-wal  envexampl.py  pyproject.toml
backend/api/: apps.py  models.py
backend/api/migrations/: 0001_initial.py  0002_delete_contact.py
backend/authorization/: serializers.py  utils.py  views.py
backend/authorization/templates/authorization/: reset_password_email.html  verify_email_code.html
backend/config/: celery.py  settings.py  urls.py
backend/contacts/: admin.py  filters.py  models.py  serializers.py  views.py
backend/contacts/migrations/: 0001_initial.py  0002_alter_contact_address.py
backend/files/: apps.py  models.py  serializers.py  views.py
backend/files/migrations/: 0001_initial.py
backend/news/: models.py  serializers.py  tasks.py  views.py
backend/news/migrations/: 0001_initial.py  0002_alter_article_guid_alter_article_link.py
backend/notes/: filters.py  models.py  serializers.py  views.py
backend/notes/migrations/: 0001_initial.py
backend/payments/: urls.py  views.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/interfaces/: form.ts
frontend/src/providers/: Providers.tsx
frontend/src/schemas/: form.yup.ts  notes.ts
frontend/src/stores/: useAuthStore.ts
frontend/src/types/: contact.ts  form.ts
(+61 files in other folders)
